--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "ndb": "^1.1.5",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   },
@@ -36,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "nodemailer": "^6.4.4",
+    "pug": "^2.0.4",
     "puppeteer": "^2.1.1",
     "slugify": "^1.3.6",
     "validator": "^12.2.0",
