--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "@prettier/plugin-pug": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -37,7 +38,7 @@
     "nodemailer": "^6.4.4",
     "pug": "^2.0.4",
     "puppeteer": "^2.1.1",
-    "slugify": "^1.3.6",
+    "slugify": "^1.4.0",
     "validator": "^12.2.0",
     "xss-clean": "^0.1.1"
   },
